syntax = "proto3";
package grains;

message Empty {}

message Position {
    string vehicle_id = 1;
    string org_id = 2;
    int64 timestamp = 3;
    double longitude = 4;
    double latitude = 5;
    int32 heading = 6;
    bool doors_open = 7;
    double speed = 8;
}

message GetPositionsHistoryRequest { }

message PositionBatch {
    repeated Position positions = 1;
}

service Vehicle {
    rpc OnPosition(Position) returns (Empty) {}
    rpc GetPositionsHistory(GetPositionsHistoryRequest) returns (PositionBatch);
}

service Organization {
    rpc OnPosition (Position) returns (Empty);
    //rpc GetGeofences(GetGeofencesRequest) returns (GetGeofencesResponse);
}